[package]
name = "meow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# library for parsing command line arguments
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
# For syntax highlighting
syntect = "5.0"